--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             <h3 class="text-2xl text-white p-2 m-2">Complete Yellow Colour Side After Yellow Cross</h3>
             <twisty-player
                 puzzle="3x3x3"
-                alg="R' F R' B B R F' R' B B R R U'"
+                setup-alg="R U R' U R U U R'"
+                alg="R U R' U R U U R'"
                 background="none"
-                playback-view="end"
+                playback-view="start"
+                playback-loop="once"
                 style="width:402px; height:402px;">
             </twisty-player>
             <br>
