--- a/index.html
+++ b/index.html
@@ -173,6 +173,40 @@
               style="width:100%; height:300px;"
             ></twisty-player>
           </div>
+
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 3</h3>
+            <twisty-player
+              puzzle="3x3x3"
+              alg="R U R' U R U U R' R U R' U R U U R'"
+              background="none"
+              playback-view="end"
+              style="width:100%; height:300px;"
+            ></twisty-player>
+          </div>
+
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 4</h3>
+            <twisty-player
+              puzzle="3x3x3"
+              alg="R U R' U R U U R' R U R' U R U U R' R U R' U R U U R'"
+              background="none"
+              playback-view="end"
+              style="width:100%; height:300px;"
+            ></twisty-player>
+          </div>
+
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 5</h3>
+            <twisty-player
+              puzzle="3x3x3"
+              setup-alg="R U R' U R U U R' R U R' U R U U R' R U R' U R U U R' U R U R' U R U U R' U'"
+              alg="R U R' U R U U R' R U R' U R U U R' R U R' U R U U R' U R U R' U R U U R' U'"
+              background="none"
+              playback-view="start"
+              style="width:100%; height:300px;"
+            ></twisty-player>
+          </div>
         </div>
 
         <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
