--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
         Make White Cross
       </h2>
-      <div class="grid grid-cols-1 sm:flex flex-col gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
+      <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-semibold mb-2 text-yellow-300 text-center">White Dot Case</h3>
             <twisty-player
@@ -151,7 +151,7 @@
         <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
             Complete White Side
         </h2>
-        <div class="grid grid-cols-1 sm:flex flex-col gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 1</h3>
             <twisty-player
@@ -212,7 +212,7 @@
         <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
           Complete Last Layer
         </h2>
-        <div class="grid grid-cols-1 sm:flex flex-col gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">Realign Corners Correctly</h3>
             <twisty-player
