--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         3×3×3 Rubik's Cube Moves
       </h2>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-4 gap-8">
         <!-- Move Block Template -->
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
           <h3 class="text-xl font-semibold mb-2 text-cyan-300">U (Up clockwise)</h3>
@@ -113,14 +113,15 @@
       <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
         Make White Cross
       </h2>
-      <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
+      <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4">
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-semibold mb-2 text-yellow-300 text-center">White Dot Case</h3>
             <twisty-player
               puzzle="3x3x3"
-              alg="F U R U' R' F'"
+              setup-alg="F R U R' U' F'"  
+              alg="F R U R' U' F'"
               background="none"
-              playback-view="end"
+              playback-view="start"
               style="width:100%; height:300px;"
             ></twisty-player>
           </div>
@@ -151,7 +152,7 @@
         <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
             Complete White Side
         </h2>
-        <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4">
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">White Cross - Case 1</h3>
             <twisty-player
@@ -212,7 +213,7 @@
         <h2 class="text-3xl font-bold mt-12 mb-6 border-l-4 border-cyan-500 pl-4">
           Complete Last Layer
         </h2>
-        <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 gap-6 p-4">
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4">
           <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
             <h3 class="text-xl font-semibold mb-2 text-cyan-300">Realign Corners Correctly</h3>
             <twisty-player
