--- a/qwerty.html
+++ b/qwerty.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <script type="module">
-    import * as THREE from 'https://cdn.skypack.dev/three';
-    import { OrbitControls } from 'https://cdn.skypack.dev/three/examples/jsm/controls/OrbitControls';
+    import * as THREE from 'https://unpkg.com/three@0.155.0/build/three.module.js';
+  import { OrbitControls } from 'https://unpkg.com/three@0.155.0/examples/jsm/controls/OrbitControls.js?module';
 
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
@@ -35,20 +35,20 @@
     };
 
     function createCubelet(x, y, z) {
-      const size = 0.98;
-      const geometry = new THREE.BoxGeometry(1, 1, 1);
+      const geometry = new THREE.BoxGeometry(3, 3, 3);
       const materials = [
-        new THREE.MeshBasicMaterial({ color: x === 1 ? colors.R : colors.N }), // right
-        new THREE.MeshBasicMaterial({ color: x === -1 ? colors.L : colors.N }), // left
-        new THREE.MeshBasicMaterial({ color: y === 1 ? colors.U : colors.N }), // top
-        new THREE.MeshBasicMaterial({ color: y === -1 ? colors.D : colors.N }), // bottom
-        new THREE.MeshBasicMaterial({ color: z === 1 ? colors.F : colors.N }), // front
-        new THREE.MeshBasicMaterial({ color: z === -1 ? colors.B : colors.N })  // back
+        new THREE.MeshBasicMaterial({ color: x === 1 ? colors.R : colors.N }),
+        new THREE.MeshBasicMaterial({ color: x === -1 ? colors.L : colors.N }),
+        new THREE.MeshBasicMaterial({ color: y === 1 ? colors.U : colors.N }),
+        new THREE.MeshBasicMaterial({ color: y === -1 ? colors.D : colors.N }),
+        new THREE.MeshBasicMaterial({ color: z === 1 ? colors.F : colors.N }),
+        new THREE.MeshBasicMaterial({ color: z === -1 ? colors.B : colors.N })
       ];
       const cubelet = new THREE.Mesh(geometry, materials);
-      cubelet.position.set(x, y, z);
+      cubelet.position.set(x * 3.05, y * 3.05, z * 3.05);
       scene.add(cubelet);
     }
+
 
     for (let x = -1; x <= 1; x++) {
       for (let y = -1; y <= 1; y++) {
