more f2l images added

--- a/index.html
+++ b/index.html
@@ -112,13 +112,85 @@
 
       <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-4 gap-6 p-4 text-white">
         <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
-          <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L01</h3>
+          <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 1</h3>
           <img src="images/f2l1.png" alt="F2L01 case" class="rounded mb-2 w-full" />
           <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
           <ul class="list-disc list-inside text-sm text-white/80 mt-2">
             <li><code>R' F R F'</code></li>
           </ul>
         </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 2</h3>
+          <img src="images/f2l2.png" alt="F2L01 case" class="rounded mb-2 w-full" />
+          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
+          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
+            <li><code>R' F R F'</code></li>
+          </ul>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 3</h3>
+          <img src="images/f2l3.png" alt="F2L01 case" class="rounded mb-2 w-full" />
+          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
+          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
+            <li><code>R' F R F'</code></li>
+          </ul>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 4</h3>
+          <img src="images/f2l4.png" alt="F2L01 case" class="rounded mb-2 w-full" />
+          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
+          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
+            <li><code>R' F R F'</code></li>
+          </ul>
+        </div>
+
+        <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+          <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 5</h3>
+          <img src="images/f2l5.png" alt="F2L01 case" class="rounded mb-2 w-full" />
+          <p><strong>Main Algorithm:</strong> <code>U R U' R'</code></p>
+          <ul class="list-disc list-inside text-sm text-white/80 mt-2">
+            <li><code>R' F R F'</code></li>
+          </ul>
+        </div>
+
+        <!-- F2L 6 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 6</h3>
+            <img src="images/f2l6.png" alt="F2L06 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U' R U2 R' U2 R U' R'</code></p>
+          </div>
+
+          <!-- F2L 7 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 7</h3>
+            <img src="images/f2l7.png" alt="F2L07 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U R' U' R U2 R' U R</code></p>
+          </div>
+
+          <!-- F2L 8 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 8</h3>
+            <img src="images/f2l8.png" alt="F2L08 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U R' U2 R U2 R' U R</code></p>
+          </div>
+
+          <!-- F2L 9 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 9</h3>
+            <img src="images/f2l9.png" alt="F2L09 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U R' U' R U' R' U' R</code></p>
+          </div>
+
+          <!-- F2L 10 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 10</h3>
+            <img src="images/f2l10.png" alt="F2L10 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U' R U2 ' R' y' U R' U' R</code></p>
+          </div>
+
         
       </div>
 
