--- a/index.html
+++ b/index.html
@@ -191,6 +191,85 @@
             <p><strong>Main Algorithm:</strong> <code>U' R U2 ' R' y' U R' U' R</code></p>
           </div>
 
+          <!-- F2L 11 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 11</h3>
+            <img src="images/f2l11.png" alt="F2L11 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U R' U R U' R' U' R</code></p>
+          </div>
+
+          <!-- F2L 12 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 12</h3>
+            <img src="images/f2l12.png" alt="F2L12 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U' R U R' U R U R'</code></p>
+          </div>
+
+          <!-- F2L 13 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 13</h3>
+            <img src="images/f2l13.png" alt="F2L13 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U R' U2 R Dw' R U R'</code></p>
+          </div>
+
+          <!-- F2L 14 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 14</h3>
+            <img src="images/f2l14.png" alt="F2L14 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U' R U' R' U R U R'</code></p>
+          </div>
+
+          <!-- F2L 15 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 15</h3>
+            <img src="images/f2l15.png" alt="F2L15 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' R' U R U' y U' R U R'</code></p>
+          </div>
+
+          <!-- F2L 16 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 16</h3>
+            <img src="images/f2l17.png" alt="F2L16 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>R U' R' U d R' U' R</code></p>
+          </div>
+
+          <!-- F2L 17 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 17</h3>
+            <img src="images/f2l18.png" alt="F2L17 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' R' U2 R U R' U' R</code></p>
+          </div>
+
+          <!-- F2L 18 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 18</h3>
+            <img src="images/f2l19.png" alt="F2L18 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U R U2 R' U R U' R'</code></p>
+          </div>
+
+          <!-- F2L 19 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 19</h3>
+            <img src="images/f2l20.png" alt="F2L19 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U2 R U R' U R U' R'</code></p>
+          </div>
+
+          <!-- F2L 20 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 20</h3>
+            <img src="images/f2l21.png" alt="F2L20 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U' R' U2 R U' R' U R</code></p>
+          </div>
+
+          <!-- F2L 21 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 21</h3>
+            <img src="images/f2l22.png" alt="F2L21 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' U2 R' U' R U' R' U R</code></p>
+          </div>
+
+
+
         
       </div>
 
