more f2l algorithms added

--- a/index.html
+++ b/index.html
@@ -268,6 +268,50 @@
             <p><strong>Main Algorithm:</strong> <code>y' U2 R' U' R U' R' U R</code></p>
           </div>
 
+          <!-- F2L 22 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 22</h3>
+            <img src="images/f2l23.png" alt="F2L22 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>R U R' U2' R U R' U' R U R'</code></p>
+          </div>
+
+          <!-- F2L 23 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 23</h3>
+            <img src="images/f2l24.png" alt="F2L23 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' R' U' R U2 R' U' R U R' U' R</code></p>
+          </div>
+
+          <!-- F2L 24 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 24</h3>
+            <img src="images/f2l25.png" alt="F2L24 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y U' L' U L d R U' R'</code></p>
+          </div>
+
+          <!-- F2L 25 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 25</h3>
+            <img src="images/f2l26.png" alt="F2L25 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>R U' R' U R U' R'</code></p>
+          </div>
+
+          <!-- F2L 26 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 26</h3>
+            <img src="images/f2l27.png" alt="F2L26 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>y' R' U' R U R' U' R</code></p>
+          </div>
+
+          <!-- F2L 27 -->
+          <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+            <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 27</h3>
+            <img src="images/f2l28.png" alt="F2L27 case" class="rounded mb-2 w-full" />
+            <p><strong>Main Algorithm:</strong> <code>U R U' R' F R' F' R</code></p>
+          </div>
+
+          
+
 
 
         
