--- a/index.html
+++ b/index.html
@@ -354,6 +354,47 @@
           </div>
 
 
+          <!-- F2L 28 -->
+            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 28</h3>
+              <img src="images/f2l29.png" alt="F2L28 case" class="rounded mb-2 w-full" />
+              <p><strong>Main Algorithm:</strong> <code>y' R' U R U' R' U R</code></p>
+            </div>
+
+            <!-- F2L 29 -->
+            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 29</h3>
+              <img src="images/f2l30.png" alt="F2L29 case" class="rounded mb-2 w-full" />
+              <p><strong>Main Algorithm:</strong> <code>R U R' U' R U R'</code></p>
+            </div>
+
+            <!-- F2L 30 -->
+            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 30</h3>
+              <img src="images/f2l31.png" alt="F2L30 case" class="rounded mb-2 w-full" />
+              <p><strong>Main Algorithm:</strong> <code>R U' R' y' R' U2 R</code></p>
+            </div>
+
+            <!-- F2L 31 -->
+            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 31</h3>
+              <img src="images/f2l32.png" alt="F2L31 case" class="rounded mb-2 w-full" />
+              <p><strong>Main Algorithm:</strong> <code>U' R U' R' U2 R U' R'</code></p>
+            </div>
+
+            <!-- F2L 32 -->
+            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 32</h3>
+              <img src="images/f2l33.png" alt="F2L32 case" class="rounded mb-2 w-full" />
+              <p><strong>Main Algorithm:</strong> <code>U' R U R' d R' U' R</code></p>
+            </div>
+
+            <!-- F2L 33 -->
+            <div class="bg-white/10 backdrop-blur-md p-4 rounded-xl shadow-lg">
+              <h3 class="text-xl font-bold text-cyan-300 mb-2">F2L 33</h3>
+              <img src="images/f2l34.png" alt="F2L33 case" class="rounded mb-2 w-full" />
+              <p><strong>Main Algorithm:</strong> <code>U2 R U R' y' U' R' U R</code></p>
+            </div>
 
 
 
